--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="description_intro">Description</string>
     <string name="image_introduction_intro">Image Introduction</string>
 
-    <string name="first_splash_text">A Crown for Every Achievement</string>
+    <string name="first_splash_text">We are the Competition</string>
 
     <string name="loginOrRegister_welcome_txt">Easiest way to\nfind the best Ferrari Watches</string>
     <string name="get_started_loginOrRegister_btn_label">Get Started</string>
