--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,64 +187,30 @@ Privacy Policy\n\nLuxuryRack Inc. built the [Cars from Ferrari] app as a Commerc
     <string name="success_billing">Thank You For The Watch</string>
     <string name="status_billing">Buy us a Watch</string>
 
-    <string name="tvCompanyHeading1">
-    Why are Ferrari watches so valuable?
+    <string name="tvCompanyHeading1">The Prancing Horse
     </string>
-    <string name="tvCompanyDescription1">
-    People often wonder why Ferrari watches are so expensive. What is so special about the Swiss manufacturer to explain the price of its high-end mechanical watches?\n\n
-Beyond timekeeping, a Ferrari watch is an object of desire and aspiration. A symbol of achievement and success. A gratifying luxury indulgences.\n\n
-Behind the brand, the Ferrari company operates in a very different fashion from most of the other watch manufacturers in the world. The company is privately held and is set up as a charity. Ferrari is currently ranking number five on our list of the most popular luxury brands in the world.\n\n
-So, what makes Ferrari watches so expensive? In our opinion, it’s a combination of four different factors.\n\n
+    <string name="tvCompanyDescription1">In the world of motoring, there is no logo so iconic as Ferrari’s Prancing Horse. Audi’s 4 rings come close, as does Mercedes’ three-pronged star, but the equine emblem of Italy’s foremost supercar manufacturer is in a league of its own. And this level of brand recognition is the first reason that Ferrari is one of the world’s most powerful brands.
+Enzo Ferrari told the story of this logo just once. “The horse was painted on the fuselage of the fighter plane of Francesco Baracca,” said the automaker, “a heroic airman of the first world war. In 1923, I met count Enrico Baracca, the hero’s father, and then his mother, countess Paulina, who said to me one day, ‘Ferrari, put my son’s prancing horse on your cars. It will bring you good luck. The horse was and still is, black, and I added the canary yellow background which is the color of Modena.”
+Now a trademark of Ferrari, the horse is synonymous with power and grace – and is said to bring luck to anyone whose vehicle bears the emblem.
 
     </string>
-
-    <string name="tvCompanyHeading2">
-    Leading innovation
+    <string name="tvCompanyHeading2">Formula 1 success
     </string>
-    <string name="tvCompanyDescription2">
-    Ferrari owns several labs at its headquarter offices in Geneva. Their in-house researchers work on new watches, of course, but also on new and more efficient manufacturing techniques.\n\n
-    </string>
-    <string name="tvCompanyHeading3">
-    Rare and precious materials
-    </string>
-    <string name="tvCompanyDescription3">
-    Ferrari produces its steel, gold, and platinum in-house. They developed unique manufacturing processes to create stainless steel watches in 904L steel as it’s more robust and maintains its polish look over time. They also transform raw 24k gold plates into 18k yellow, white, or rose gold materials (called Everose gold).\n\n
-Ferrari also has its gemological department to buy, test, cut, and place diamonds and precious stones on its watches. Each stone is carefully hand-selected and handset using the same processes as the world’s most renowned jewellery brands.\n\n
+    <string name="tvCompanyDescription2">Ferrari doesn’t just turn heads on the road; they also turn heads on the track. Scuderia Ferrari is the oldest surviving and one of the most successful Formula One teams in history, having competed in every world championship since the 1950 season, and winning a total of 228 races across the last half-century.
+This success has contributed to the brand’s wider prosperity in several ways. Not only do consistent race wins satisfy consumers that Ferraris are mechanically sound and reliable investments, but the association with racers from Niki Lauda to Michael Schumacher helps to elevate the Prancing Horse to a whole new level of both cool and competence.
 
     </string>
-    <string name="tvCompanyHeading4">
-    Outstanding manufacturing process
+    <string name="tvCompanyHeading3">Fiat
     </string>
-    <string name="tvCompanyDescription4">
-    Ferrari has perfected its watch manufacturing process to use both machines and humans in the most efficient way possible. Every Ferrari movement and bracelet are still assembled by hand, even though robots and machines are used along the way to assist technicians.\n\n
+    <string name="tvCompanyDescription3">Thanks to the backing of fellow Italian automaker Fiat, in 1969 Ferrari suddenly saw a huge increase in available investment funds, and work started on a factory extension – meaning that more cars would be produced, Ferraris would become more ubiquitous and the brand would become stronger as a result.
     </string>
-    <string name="tvCompanyHeading5">
-    Dedication, time and attention to details
+    <string name="tvCompanyHeading4">Popular culture
     </string>
-    <string name="tvCompanyDescription5">
-    From the categorisation of raw materials to the assembly and testing, it takes about a year to make a single Ferrari watch.\n\n
-Just take the dial creation as an example. After extensive testing, Ferrari found that humans were better at positioning markers on a dial than robots. So, every dial is still crafted by hand. The finished categories is then dropped from 20 cm up in the air to ensure that everything is holding as expected.\n\n
-Because Ferrari sells about a million watches per year, the time they spend producing each watch is remarkable.\n\n
-
+    <string name="tvCompanyDescription4">From Magnum PI to Ferris Bueller’s Day Off, Ferraris have graced screens both small and silver since the brand’s inception. And there is no putting a price on the brand boost you get when one of the biggest stars of cinema is seen driving your car. From Christian Bale to Leonardo DiCaprio, the number of famous Ferrari drivers who have been seen behind the wheel of these supercars has heightened the brand’s cache remarkably.
     </string>
-    <string name="tvCompanyHeading6">
-    Are Ferrari watches a good investment?
+    <string name="tvCompanyHeading5">The ‘soul’ of the supercars
     </string>
-    <string name="tvCompanyDescription6">
-    The price of some of the most expensive Ferrari watches sold over the past five years is incredible. Especially when you consider the price that they were first bought at. Some collectors made it their specialty to invest in rare Ferraries to sell them back with a significant gain a few years later.\n\n
-Most contemporary Ferrari models will probably not gain the same value in 50 years but they still maintain excellent resale value. The price of a second-hand Ferrari watch with original papers and box is indeed very close to the original selling price.\n\n
-When looking at our list of the most expensive Ferrari watches, it’s clear that four factors drive value and speculation:\n\n
-1.	Rarity of the watch design\n
-2.	Fame of its previous owner\n
-3.	Quality of its materials\n
-4.	Overall condition of the watch\n\n
-Casual observers might have the impression that the price of Ferrari watches has also increased over the past few years. You might have heard that the original Submariners did not cost more than $200 in the late 50s. But when taking into account the inflation over the past 60 years, we see that Ferrari has maintained the price of its watches fairly stable.\n\n
- \n
-Taking the entry model stainless steel Submariner no date as an example, we see indeed that its price has “only” increased 6.65 fold over the entire period.\n\n
-So, should you buy a Ferrari as an investment? It depends on your investment goals, experience, and time frame. If you want a great watch that will maintain its value, a contemporary Ferrari is a great option. As would a Patek Philippe or an Audemars Piguet, for example.\n\n
-If you only want to treat it as an investment, a historical piece will be a better fit but it’s a risky business. You’ll need to be able to distinguish an authentic expensive Ferrari from the many fake that are sold online. You’ll also need to have a good sense of what might increase in value over the coming years. And you’ll need to be able to time the resale to maximize your profit. It’s doable if you have those skills but we would not recommend it to anyone.\n
-
-
+    <string name="tvCompanyDescription5">“My motors have a soul,” said Enzo Ferrari famously. And is he wrong? Although he died at the age of 90 in 1988, Ferrari’s Ferraris continue to be imbued with the same passion and soul that they always were, and customers both old and new are said to appreciate and cherish the ‘spirit’ of these supercars. And if there’s a marketing tool to top all others, it’s a feeling – something you can’t put your finger on, but has managed to make your brand among the most powerful in the world.
     </string>
     <string name="tvCompanySpacing">
         \n\n\n\n\n\n\n\n\n\n
