--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,6 +212,10 @@ This success has contributed to the brand’s wider prosperity in several ways. 
     </string>
     <string name="tvCompanyDescription5">“My motors have a soul,” said Enzo Ferrari famously. And is he wrong? Although he died at the age of 90 in 1988, Ferrari’s Ferraris continue to be imbued with the same passion and soul that they always were, and customers both old and new are said to appreciate and cherish the ‘spirit’ of these supercars. And if there’s a marketing tool to top all others, it’s a feeling – something you can’t put your finger on, but has managed to make your brand among the most powerful in the world.
     </string>
+    <string name="tvCompanyHeading6">
+    </string>
+    <string name="tvCompanyDescription6">
+    </string>
     <string name="tvCompanySpacing">
         \n\n\n\n\n\n\n\n\n\n
     </string>
