--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,7 +108,6 @@ Privacy Policy\n\nLuxuryRack Inc. built the [Cars from Ferrari] app as a Commerc
     <string name="profile_nav_home">Profile</string>
 
 
-
     <string name="buy_us_a_car_nav_home">Buy Us A Car</string>
     <string name="facts_about_us_nav_home">Facts About Us</string>
     <string name="sign_out_nav_home">SignOut</string>
@@ -117,7 +116,6 @@ Privacy Policy\n\nLuxuryRack Inc. built the [Cars from Ferrari] app as a Commerc
     <string name="share_on_twitter_nav_home">Share on Twitter</string>
     <string name="about_us_nav_home">About Us</string>
     <string name="company_nav_home">Company</string>
-
 
 
     <string name="toolbar_expensive">Expensive Cars</string>
@@ -1365,6 +1363,7 @@ This success has contributed to the brand’s wider prosperity in several ways. 
     <string name="error_parse_trending_search">Parse trending searches failed.\nTap to retry.</string>
     <string name="reddit_signup">SignUp</string>
     <string name="discover_blogs">Read the best Blogs written on Ferrari from Top Notch Editors.</string>
+    <string name="discover_video">Watch best showcase videos from Cars from Ferrari</string>
 
 
 </resources>
