--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1364,6 +1364,7 @@ This success has contributed to the brand’s wider prosperity in several ways. 
     <string name="reddit_signup">SignUp</string>
     <string name="discover_blogs">Read the best Blogs written on Ferrari from Top Notch Editors.</string>
     <string name="discover_video">Watch best showcase videos from Cars from Ferrari</string>
+    <string name="youtube_videos_nav_home">Youtube Videos</string>
 
 
 </resources>
