--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1366,9 +1366,9 @@ This success has contributed to the brand’s wider prosperity in several ways. 
     <string name="discover_video">Watch best showcase videos from Cars from Ferrari</string>
     <string name="youtube_videos_nav_home">Youtube Videos</string>
 
-    <string name="advantageBlog">Read the best Blogs written on Rolex from Top Notch Editors.</string>
-    <string name="advantageVideo">Watch the best Showcase Videos of Rolex Watches</string>
-    <string name="advantageExpensive"><font fgcolor='#0084ff'>•</font> Discover the Most Expensive Watches from Rolex</string>
+    <string name="advantageBlog">Read the best Blogs written on Ferrari from Top Notch Editors.</string>
+    <string name="advantageVideo">Watch the best Showcase Videos of Ferrari Watches</string>
+    <string name="advantageExpensive"><font fgcolor='#0084ff'>•</font> Discover the Most Expensive Watches from Ferrari</string>
     <string name="purchase_information_description">This item is can only be purchased by first 100 Users.</string>
     <string name="checker_people_description">Users currently looking at this Product</string>
     <string name="loginorregisterInformation">Swipe Right to Login \n Swipe Left to Register</string>
