--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1368,7 +1368,7 @@ This success has contributed to the brand’s wider prosperity in several ways. 
 
     <string name="advantageBlog">Read the best Blogs written on Ferrari from Top Notch Editors.</string>
     <string name="advantageVideo">Watch the best Showcase Videos of Ferrari Watches</string>
-    <string name="advantageExpensive"><font fgcolor='#0084ff'>•</font> Discover the Most Expensive Watches from Ferrari</string>
+    <string name="advantageExpensive"><font fgcolor='#0084ff'>•</font> Discover the Most Expensive Cars from Ferrari</string>
     <string name="purchase_information_description">This item is can only be purchased by first 100 Users.</string>
     <string name="checker_people_description">Users currently looking at this Product</string>
     <string name="loginorregisterInformation">Swipe Right to Login \n Swipe Left to Register</string>
