--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1368,6 +1368,7 @@ This success has contributed to the brand’s wider prosperity in several ways. 
 
     <string name="advantageBlog">Read the best Blogs written on Ferrari from Top Notch Editors.</string>
     <string name="advantageVideo">Watch the best Showcase Videos of Ferrari Watches</string>
+    <string name="purchase_information_timer">Get this product at a discount price of $352 instead of $999 before this timer runs out.</string>
     <string name="advantageExpensive"><font fgcolor='#0084ff'>•</font> Discover the Most Expensive Cars from Ferrari</string>
     <string name="purchase_information_description">This item can only be purchased by first 100 Users.</string>
     <string name="checker_people_description">Users currently looking at this Product</string>
