--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1367,7 +1367,7 @@ This success has contributed to the brand’s wider prosperity in several ways. 
     <string name="youtube_videos_nav_home">Youtube Videos</string>
 
     <string name="advantageBlog">Read the best Blogs written on Ferrari from Top Notch Editors.</string>
-    <string name="advantageVideo">Watch the best Showcase Videos of Ferrari Watches</string>
+    <string name="advantageVideo">Watch the best Showcase Videos of Ferrari Sports Cars</string>
     <string name="purchase_information_timer">Get this product at a discount price of $352 instead of $999 before this timer runs out.</string>
     <string name="advantageExpensive"><font fgcolor='#0084ff'>•</font> Discover the Most Expensive Cars from Ferrari</string>
     <string name="purchase_information_description">This item can only be purchased by first 100 Users.</string>
