--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,6 @@
 
     <string name="first_splash_text">We are the Competition</string>
 
-    <string name="loginOrRegister_welcome_txt">Easiest way to\nfind the best Ferrari Cars</string>
     <string name="get_started_loginOrRegister_btn_label">Get Started</string>
 
     <string name="no_internet_connection">No Internet Connection</string>
@@ -1366,13 +1365,18 @@ This success has contributed to the brand’s wider prosperity in several ways. 
     <string name="discover_video">Watch best showcase videos from Cars from Ferrari</string>
     <string name="youtube_videos_nav_home">Youtube Videos</string>
 
-    <string name="advantageBlog">Read the best Blogs written on Ferrari from Top Notch Editors.</string>
-    <string name="advantageVideo">Watch the best Showcase Videos of Ferrari Sports Cars</string>
-    <string name="purchase_information_timer">Get this product at a discount price of $352 instead of $999 before this timer runs out.</string>
-    <string name="advantageExpensive"><font fgcolor='#0084ff'>•</font> Discover the Most Expensive Cars from Ferrari</string>
-    <string name="purchase_information_description">This item can only be purchased by first 100 Users.</string>
+    <string name="advantageBlog"><font fgcolor='#0084ff'>•</font> Read the best Blogs written on Rolex from Top Notch Editors and get 100,000(80,000+20,000) coins.</string>
+    <string name="advantageVideo"><font fgcolor='#0084ff'>•</font> Watch the best Showcase Videos of Rolex Watches and get 100,000(80,000+20,000) coins.</string>
+    <string name="advantageExpensive"><font fgcolor='#0084ff'>•</font> Discover the Most Expensive Watches from Rolex and get 100,000(80,000+20,000) coins.</string>
+    <string name="purchase_information_description">This item is can only be purchased by first 100 Users.</string>
+    <string name="purchase_information_timer">Get this product at a discount price of $352 instead of $999 and an additional 20,000 coins before this timer runs out.</string>
     <string name="checker_people_description">Users currently looking at this Product</string>
+    <string name="checker_purchase_description">Users remaining who can purchase</string>
     <string name="loginorregisterInformation">Swipe Right to Login \n Swipe Left to Register</string>
+    <string name="redeem_image_redeems">Redeem Image</string>
+    <string name="title_redeems">Redeem Title</string>
+    <string name="redeem_price_redeems">Redeem Price</string>
+    <string name="loginOrRegister_welcome_txt">Welcome to Rolex,\nThe world\'s most prestigious and versatile Watch Company.\nFor those who demand only the best of what life has to offer.</string>
 
 
 </resources>
