--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1373,6 +1373,8 @@ This success has contributed to the brand’s wider prosperity in several ways. 
     <string name="dialogue_redeem">You have Successfully Applied to our Waiting List</string>
     <string name="image_alert_dialogue_registration">Image Alert Dialogue</string>
     <string name="redeem_information">Apply Now to Join our Exclusive Waiting list for this Watch</string>
+    <string name="redeem_apply_information">500,000 Coins will be used</string>
+
 
 
 </resources>
